Fleur: Import EvolutionX makefiles
Signed-off-by: RohitTiwari <rohitttiwari52@gmail.com>

--- a/rro_overlays/SettingsOverlayFleur/res/values/config.xml
+++ b/rro_overlays/SettingsOverlayFleur/res/values/config.xml
@@ -35,4 +35,8 @@
     <!-- Whether to show min/max refresh rate in display settings -->
     <bool name="config_show_refresh_rate_controls">true</bool>
     <bool name="config_supports_dynamic_refresh_rate_controls">true</bool>
+
+    <!-- ROM maintainer name -->
+    <string name="build_maintainer_summary">Rohit Tiwari</string>
+
 </resources>
